log/build_2024-11-21_23-51-18/Optimization_module/stderr.log
  File "/mnt/d/Documentos/PUC-Rio/Maestrado/ELE2363/Optimization_based_robotics/install/Optimization_module/lib/python3.12/site-packages/Optimization_module/PID_model_node.py", line 45
    Kd=0.1,
    ^^^^^^
SyntaxError: keyword argument repeated: Kd

